# vylexAI-Android

./: .editorconfig  .gitignore  CODEOWNERS  DEPLOY.md  KEYSTORE.md  LICENSE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: backend.yml  ci.yml  deploy.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/debug/: AndroidManifest.xml
app/src/debug/res/xml/: network_security_config.xml
app/src/main/: AndroidManifest.xml
app/src/main/java/com/vylexai/app/: MainActivity.kt  VylexApp.kt
app/src/main/java/com/vylexai/app/data/auth/: AuthInterceptor.kt  AuthRepository.kt  (+1 more)
app/src/main/java/com/vylexai/app/ui/: VylexApp.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
backend/: .env.example  .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 034e8659bf56_init_schema.py
backend/app/: deps.py  main.py  models.py  schemas.py
backend/app/api/: auth.py  devices.py  heartbeat.py  jobs.py  tasks.py  wallet_stats.py
backend/app/core/: config.py  database.py  email.py  observability.py  security.py
backend/docker/: entrypoint.sh
backend/docs/: bsai-economics.md
backend/scripts/: install-backup-timer.sh  pg-backup.sh
config/detekt/: detekt.yml
docs/: data-safety.md  play-store-listing.md  privacy-policy.md  terms-of-service.md
docs/deck/: build.py
gradle/: libs.versions.toml
(+60 files in other folders)
