[project]
name = "vylexai-coordinator"
version = "0.1.0"
description = "VylexAI coordinator — routes AI tasks across the distributed smartphone network and settles BSAI rewards."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.5",
    "uvicorn[standard]>=0.32.1",
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.2",
    "pydantic-settings>=2.6.1",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.2.0",
    "python-multipart>=0.0.19",
    "httpx>=0.28.0",
    "google-auth>=2.36.0",
    "greenlet>=3.0.0",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.2",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ASYNC"]
ignore = ["B008"]  # FastAPI's Depends(...) in parameter defaults is idiomatic

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools]
packages = ["app", "app.api", "app.core"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
